return tg along with siblings